--- a/templates/table/search/input_box.twig
+++ b/templates/table/search/input_box.twig
@@ -44,7 +44,7 @@
 {% elseif column_type starts with 'enum'
     or (column_type starts with 'set' and in_zoom_search_edit) %}
     {% set in_zoom_search_edit = false %}
-    {% set value = column_type|e|slice(5, -1)|replace({'&#039;': ''})|split(', ') %}
+    {% set value = column_type|e|slice(5, -1)|replace({"&#039;,&#039;": "&#059;"})|replace({"&#039;": ""})|split("&#059;") %}
     {% set cnt_value = value|length %}
     {#
     Enum in edit mode   --> dropdown
